// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectScreen > matches snapshot with all projects 1`] = `
<div
  style="height: 100%; display: flex; flex-direction: column;"
>
  <div
    style="display: flex; flex-wrap: wrap; justify-content: space-between; align-items: flex-start; gap: 10px 16px; margin-bottom: 12px; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 229, 255, 0.1);"
  >
    <div
      style="flex: 1 1 260px; min-width: 0px;"
    >
      <div
        class="signage"
        style="font-family: "Press Start 2P", monospace; font-size: 16px; line-height: 1.5; color: rgb(0, 229, 255); letter-spacing: var(--track-pixel);"
      >
        SELECT PROGRAM
      </div>
      <h1
        style="font-size: 10px; font-weight: 400; color: var(--cab-text); letter-spacing: var(--track-ui); margin: 6px 0px 0px;"
      >
        MORGAN ESPITIA
         · 
        SOFTWARE ENGINEER
      </h1>
      <div
        class="desk-only"
        style="font-family: var(--font-body); display: flex; flex-wrap: wrap; column-gap: 10px; font-size: 11px; color: var(--cab-muted); letter-spacing: var(--track-ui); margin-top: 2px;"
      >
        <a
          href="mailto:ampactorlabs@gmail.com"
          style="color: inherit; text-decoration: none;"
        >
          ampactorlabs@gmail.com
        </a>
        <a
          href="tel:+14352682446"
          style="color: inherit; text-decoration: none;"
        >
          +1 435-268-2446
        </a>
      </div>
    </div>
    <nav
      aria-label="Operator"
      class="desk-only"
      style="display: flex; flex-wrap: wrap; gap: 6px; align-items: center;"
    >
      <a
        class="pill"
        href="/resume.html"
        style="font-family: "Press Start 2P", monospace; color: rgb(0, 229, 255); text-decoration: none; display: inline-block; font-size: 8px; line-height: 1; border: 1px solid rgba(0, 229, 255, 0.35); border-radius: 3px; background: rgba(0, 229, 255, 0.06); padding: 7px 8px; letter-spacing: var(--track-pixel); white-space: nowrap;"
      >
        RESUME
      </a>
      <a
        class="pill"
        href="https://github.com/ampactor-labs"
        rel="noopener noreferrer"
        style="font-family: "Press Start 2P", monospace; color: rgb(0, 229, 255); text-decoration: none; display: inline-block; font-size: 8px; line-height: 1; border: 1px solid rgba(0, 229, 255, 0.35); border-radius: 3px; background: rgba(0, 229, 255, 0.06); padding: 7px 8px; letter-spacing: var(--track-pixel); white-space: nowrap;"
        target="_blank"
      >
        GITHUB
      </a>
      <a
        class="pill"
        href="https://www.linkedin.com/in/ampactor-labs/"
        rel="noopener noreferrer"
        style="font-family: "Press Start 2P", monospace; color: rgb(0, 229, 255); text-decoration: none; display: inline-block; font-size: 8px; line-height: 1; border: 1px solid rgba(0, 229, 255, 0.35); border-radius: 3px; background: rgba(0, 229, 255, 0.06); padding: 7px 8px; letter-spacing: var(--track-pixel); white-space: nowrap;"
        target="_blank"
      >
        LINKEDIN
      </a>
    </nav>
    <nav
      aria-label="Operator"
      class="phone-rail"
      style="display: none; flex-basis: 100%;"
    >
      <a
        href="/resume.html"
        style="font-family: "Press Start 2P", monospace; font-size: 8px; letter-spacing: var(--track-pixel); color: rgb(0, 229, 255); border: 1px solid rgba(0, 229, 255, 0.35); background: rgba(0, 229, 255, 0.06);"
      >
        RESUME
      </a>
      <a
        href="https://github.com/ampactor-labs"
        rel="noopener noreferrer"
        style="font-family: "Press Start 2P", monospace; font-size: 8px; letter-spacing: var(--track-pixel); color: rgb(0, 229, 255); border: 1px solid rgba(0, 229, 255, 0.35); background: rgba(0, 229, 255, 0.06);"
        target="_blank"
      >
        GITHUB
      </a>
      <a
        href="https://www.linkedin.com/in/ampactor-labs/"
        rel="noopener noreferrer"
        style="font-family: "Press Start 2P", monospace; font-size: 8px; letter-spacing: var(--track-pixel); color: rgb(0, 229, 255); border: 1px solid rgba(0, 229, 255, 0.35); background: rgba(0, 229, 255, 0.06);"
        target="_blank"
      >
        LINKEDIN
      </a>
      <a
        href="mailto:ampactorlabs@gmail.com"
        style="font-family: var(--font-body); font-size: 10px; letter-spacing: var(--track-display); color: var(--cab-muted); border: 1px solid rgba(185, 166, 232, 0.3); background: rgba(185, 166, 232, 0.05); padding: 0px 10px;"
      >
        ampactorlabs@gmail.com
      </a>
      <a
        href="tel:+14352682446"
        style="font-family: var(--font-body); font-size: 10px; letter-spacing: var(--track-display); color: var(--cab-muted); border: 1px solid rgba(185, 166, 232, 0.3); background: rgba(185, 166, 232, 0.05); padding: 0px 10px;"
      >
        +1 435-268-2446
      </a>
    </nav>
  </div>
  <div
    aria-activedescendant="program-mentl"
    aria-label="Project list"
    role="listbox"
    style="flex: 1 1 0%; overflow-y: auto; overflow-x: hidden; display: flex; flex-direction: column; gap: 3px; backdrop-filter: blur(2px); outline: none;"
    tabindex="0"
  >
    <div>
      <div
        class="sign"
        style="padding: 8px 4px 2px; margin-top: 0px;"
      >
        <span
          style="font-family: "Press Start 2P", monospace; font-size: 8px; color: var(--cab-muted); letter-spacing: var(--track-pixel); white-space: nowrap;"
        >
          SYSTEMS
        </span>
        <div
          aria-hidden="true"
          class="sunset"
        />
      </div>
      <div
        aria-label="MENTL — SELF-HOSTING COMPILER"
        aria-selected="true"
        class="project-row"
        id="program-mentl"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: linear-gradient(rgba(0, 229, 255, 0.06), rgba(0, 229, 255, 0.06)), rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(0, 229, 255, 0.15); border-right: 1px solid rgba(0, 229, 255, 0.15); border-bottom: 1px solid rgba(0, 229, 255, 0.15); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: rgb(224, 255, 0); border-radius: 2px; position: absolute; left: 2px; box-shadow: 0 0 6px #E0FF00; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(224, 255, 0); background: rgba(224, 255, 0, 0.067); border-radius: 5px; border: 1px solid rgba(224, 255, 0, 0.133); flex-shrink: 0;"
        >
          ☀
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: rgb(224, 255, 0); transition: color 0.2s ease;"
            >
              MENTL
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              Mentl/WASM
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            SELF-HOSTING COMPILER
          </div>
        </div>
        <div
          style="color: rgb(224, 255, 0); font-size: 14px; flex-shrink: 0; opacity: 0.6;"
        >
          ›
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="SONIDO — CROSS-PLATFORM DSP KERNEL"
        aria-selected="false"
        class="project-row"
        id="program-sonido"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(0, 229, 255); background: rgba(0, 229, 255, 0.067); border-radius: 5px; border: 1px solid rgba(0, 229, 255, 0.133); flex-shrink: 0;"
        >
          ♫
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              SONIDO
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              Rust
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            CROSS-PLATFORM DSP KERNEL
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="TURBOSORT — SIMD-ACCELERATED RADIX SORT"
        aria-selected="false"
        class="project-row"
        id="program-turbosort"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(255, 107, 53); background: rgba(255, 107, 53, 0.067); border-radius: 5px; border: 1px solid rgba(255, 107, 53, 0.133); flex-shrink: 0;"
        >
          ⚡
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              TURBOSORT
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              Rust
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            SIMD-ACCELERATED RADIX SORT
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="2-TOP — ROLLBACK NETCODE BRAWLER"
        aria-selected="false"
        class="project-row"
        id="program-two-top"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(255, 68, 102); background: rgba(255, 68, 102, 0.067); border-radius: 5px; border: 1px solid rgba(255, 68, 102, 0.133); flex-shrink: 0;"
        >
          ⚔
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              2-TOP
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              Rust/Bevy
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            ROLLBACK NETCODE BRAWLER
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="CLOB — TERNARY INTELLIGENCE KERNEL"
        aria-selected="false"
        class="project-row"
        id="program-clob"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(0, 255, 156); background: rgba(0, 255, 156, 0.067); border-radius: 5px; border: 1px solid rgba(0, 255, 156, 0.133); flex-shrink: 0;"
        >
          ∴
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              CLOB
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              Rust
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            TERNARY INTELLIGENCE KERNEL
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="sign"
        style="padding: 8px 4px 2px; margin-top: 6px;"
      >
        <span
          style="font-family: "Press Start 2P", monospace; font-size: 8px; color: var(--cab-muted); letter-spacing: var(--track-pixel); white-space: nowrap;"
        >
          SECURITY
        </span>
        <div
          aria-hidden="true"
          class="sunset"
        />
      </div>
      <div
        aria-label="TOKENSAFE + SCRY — SOLANA SECURITY SCANNER"
        aria-selected="false"
        class="project-row"
        id="program-tokensafe"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(255, 68, 170); background: rgba(255, 68, 170, 0.067); border-radius: 5px; border: 1px solid rgba(255, 68, 170, 0.133); flex-shrink: 0;"
        >
          ◈
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              TOKENSAFE + SCRY
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              TypeScript/Rust
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            SOLANA SECURITY SCANNER
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="sign"
        style="padding: 8px 4px 2px; margin-top: 6px;"
      >
        <span
          style="font-family: "Press Start 2P", monospace; font-size: 8px; color: var(--cab-muted); letter-spacing: var(--track-pixel); white-space: nowrap;"
        >
          WEB3
        </span>
        <div
          aria-hidden="true"
          class="sunset"
        />
      </div>
      <div
        aria-label="LANDED — SOLANA EXECUTION GATEWAY"
        aria-selected="false"
        class="project-row"
        id="program-landed"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(20, 241, 149); background: rgba(20, 241, 149, 0.067); border-radius: 5px; border: 1px solid rgba(20, 241, 149, 0.133); flex-shrink: 0;"
        >
          🛬
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              LANDED
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              Rust
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            SOLANA EXECUTION GATEWAY
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="sign"
        style="padding: 8px 4px 2px; margin-top: 6px;"
      >
        <span
          style="font-family: "Press Start 2P", monospace; font-size: 8px; color: var(--cab-muted); letter-spacing: var(--track-pixel); white-space: nowrap;"
        >
          CREATIVE
        </span>
        <div
          aria-hidden="true"
          class="sunset"
        />
      </div>
      <div
        aria-label="PERENNIALS — CONSTRAINT-SPACE FIELD GUIDE"
        aria-selected="false"
        class="project-row"
        id="program-perennials"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(139, 191, 106); background: rgba(139, 191, 106, 0.067); border-radius: 5px; border: 1px solid rgba(139, 191, 106, 0.133); flex-shrink: 0;"
        >
          ❦
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              PERENNIALS
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              React/TS
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            CONSTRAINT-SPACE FIELD GUIDE
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="BITS — PUPPET-SHOW INSTRUMENT"
        aria-selected="false"
        class="project-row"
        id="program-bits"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(58, 134, 255); background: rgba(58, 134, 255, 0.067); border-radius: 5px; border: 1px solid rgba(58, 134, 255, 0.133); flex-shrink: 0;"
        >
          ✂
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              BITS
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              TS/React
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            PUPPET-SHOW INSTRUMENT
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="NOODLES — MOBILE DAW"
        aria-selected="false"
        class="project-row"
        id="program-noodles"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(232, 184, 75); background: rgba(232, 184, 75, 0.067); border-radius: 5px; border: 1px solid rgba(232, 184, 75, 0.133); flex-shrink: 0;"
        >
          ♬
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              NOODLES
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              JS/Tone.js
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            MOBILE DAW
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="COPYCATS — REPLAY-GHOST PARTY RACER"
        aria-selected="false"
        class="project-row"
        id="program-copycats"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(254, 128, 25); background: rgba(254, 128, 25, 0.067); border-radius: 5px; border: 1px solid rgba(254, 128, 25, 0.133); flex-shrink: 0;"
        >
          🐾
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              COPYCATS
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              Godot 4.7
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            REPLAY-GHOST PARTY RACER
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="STOOP — A PRESS FOR A PERIODICAL"
        aria-selected="false"
        class="project-row"
        id="program-stoop"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(255, 63, 164); background: rgba(255, 63, 164, 0.067); border-radius: 5px; border: 1px solid rgba(255, 63, 164, 0.133); flex-shrink: 0;"
        >
          ¶
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              STOOP
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              JavaScript
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            A PRESS FOR A PERIODICAL
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="UNDERSTORY — LYRIC X-RAY"
        aria-selected="false"
        class="project-row"
        id="program-understory"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(125, 197, 159); background: rgba(125, 197, 159, 0.067); border-radius: 5px; border: 1px solid rgba(125, 197, 159, 0.133); flex-shrink: 0;"
        >
          ⏚
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              UNDERSTORY
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              JavaScript
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            LYRIC X-RAY
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="CELEZDIAL SELEKTA — ZODIAC-MAPPED SYNTHESIZER"
        aria-selected="false"
        class="project-row"
        id="program-celezdial"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(157, 123, 255); background: rgba(157, 123, 255, 0.067); border-radius: 5px; border: 1px solid rgba(157, 123, 255, 0.133); flex-shrink: 0;"
        >
          ☽
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              CELEZDIAL SELEKTA
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              React/Tone.js
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            ZODIAC-MAPPED SYNTHESIZER
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="FREESTYLE ENGINE — FREESTYLE RAP PRACTICE"
        aria-selected="false"
        class="project-row"
        id="program-freestyle-engine"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(233, 231, 220); background: rgba(233, 231, 220, 0.067); border-radius: 5px; border: 1px solid rgba(233, 231, 220, 0.133); flex-shrink: 0;"
        >
          🎤
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              FREESTYLE ENGINE
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              TypeScript
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            FREESTYLE RAP PRACTICE
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="SLOT — B♭ TRUMPET TUNING LATTICE"
        aria-selected="false"
        class="project-row"
        id="program-slot"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(255, 176, 0); background: rgba(255, 176, 0, 0.067); border-radius: 5px; border: 1px solid rgba(255, 176, 0, 0.133); flex-shrink: 0;"
        >
          🎺
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              SLOT
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              JavaScript
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            B♭ TRUMPET TUNING LATTICE
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="COMMA — THE PYTHAGOREAN COMMA, PLAYED"
        aria-selected="false"
        class="project-row"
        id="program-comma"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(99, 196, 224); background: rgba(99, 196, 224, 0.067); border-radius: 5px; border: 1px solid rgba(99, 196, 224, 0.133); flex-shrink: 0;"
        >
          ≋
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              COMMA
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              JavaScript
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            THE PYTHAGOREAN COMMA, PLAYED
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="APAPACHO — WORDS · FRASES · SEÑAS"
        aria-selected="false"
        class="project-row"
        id="program-apapacho"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(224, 138, 74); background: rgba(224, 138, 74, 0.067); border-radius: 5px; border: 1px solid rgba(224, 138, 74, 0.133); flex-shrink: 0;"
        >
          🫂
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              APAPACHO
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              JavaScript
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            WORDS · FRASES · SEÑAS
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="SYS/RESONANCE — SUBTRACTIVE SYNTH"
        aria-selected="false"
        class="project-row"
        id="program-resonance"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-width: 1px 1px 1px 2px; border-style: solid solid solid dashed; border-color: rgba(185, 166, 232, 0.08) rgba(185, 166, 232, 0.08) rgba(185, 166, 232, 0.08) rgba(255, 184, 0, 0.2); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: -1px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(255, 184, 0); background: rgba(255, 184, 0, 0.067); border-radius: 5px; border: 1px solid rgba(255, 184, 0, 0.133); flex-shrink: 0;"
        >
          ∿
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              SYS/RESONANCE
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              WebAudio
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            SUBTRACTIVE SYNTH
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="COHERENCE FIELD — CONSERVATION LAWS"
        aria-selected="false"
        class="project-row"
        id="program-coherence"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-width: 1px 1px 1px 2px; border-style: solid solid solid dashed; border-color: rgba(185, 166, 232, 0.08) rgba(185, 166, 232, 0.08) rgba(185, 166, 232, 0.08) rgba(0, 221, 187, 0.2); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: -1px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(0, 221, 187); background: rgba(0, 221, 187, 0.067); border-radius: 5px; border: 1px solid rgba(0, 221, 187, 0.133); flex-shrink: 0;"
        >
          ◎
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              COHERENCE FIELD
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              —
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            CONSERVATION LAWS
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="TUNNEL_RUN — VECTOR SHOOTER"
        aria-selected="false"
        class="project-row"
        id="program-tunnel-run"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-width: 1px 1px 1px 2px; border-style: solid solid solid dashed; border-color: rgba(185, 166, 232, 0.08) rgba(185, 166, 232, 0.08) rgba(185, 166, 232, 0.08) rgba(255, 34, 102, 0.2); border-image: none; position: relative; box-shadow: 0 0 8px #ff226622;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: -1px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 20px; color: rgb(255, 34, 102); background: rgba(255, 34, 102, 0.1); border-radius: 5px; border: 1px solid rgba(255, 34, 102, 0.267); flex-shrink: 0;"
        >
          ▸
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              TUNNEL_RUN
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              Canvas
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            VECTOR SHOOTER
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="marquee-band"
    style="display: none; height: 3px; margin-top: 10px; border-radius: 2px; background: rgb(224, 255, 0); box-shadow: 0 0 10px rgba(224,255,0,0.6);"
  />
  <div
    class="marquee-wrap"
    style="margin-top: 10px; padding-top: 8px; border-top: 1px solid rgba(0, 229, 255, 0.06); overflow: hidden; height: 24px; position: relative;"
  >
    <div
      class="marquee-track"
      style="font-family: var(--font-body); font-size: 8px; color: var(--cab-faint); letter-spacing: var(--track-ui); animation-duration: 247s;"
    >
      <span
        style="padding-right: 48px;"
      >
        MENTL: THE COMPILER BOOTSTRAPS ITSELF · SONIDO: DESKTOP AND BARE METAL. SAME CODE. · TURBOSORT: FASTER THAN STD · 2-TOP: DETERMINISTIC ACROSS PLATFORMS · CLOB: THREE NUMBERS AND A LAPTOP · TOKENSAFE + SCRY: CHECKS THE CHAIN FOR RUGS · LANDED: WON'T SEND WHAT IT CAN'T CHECK · PERENNIALS: DESCRIBE THE SPOT, GET THE PLANTS · BITS: PUT ON THE SHOW · NOODLES: CAN'T PLAY A WRONG NOTE · COPYCATS: RACE YOUR OWN PAST LIVES · STOOP: FOLD IT, LEAVE IT SOMEWHERE · UNDERSTORY: WHAT A SONG NEVER SAYS · CELEZDIAL SELEKTA: TWELVE SIGNS, TWELVE VOICES · FREESTYLE ENGINE: DRILLS WHATEVER YOU'RE WORST AT · SLOT: 49 CELLS, 9 EXACTLY TRUE · COMMA: TWELVE FIFTHS, ONE LEFTOVER · APAPACHO: THREE CARDS A DAY
      </span>
      <span
        aria-hidden="true"
        style="padding-right: 48px;"
      >
        MENTL: THE COMPILER BOOTSTRAPS ITSELF · SONIDO: DESKTOP AND BARE METAL. SAME CODE. · TURBOSORT: FASTER THAN STD · 2-TOP: DETERMINISTIC ACROSS PLATFORMS · CLOB: THREE NUMBERS AND A LAPTOP · TOKENSAFE + SCRY: CHECKS THE CHAIN FOR RUGS · LANDED: WON'T SEND WHAT IT CAN'T CHECK · PERENNIALS: DESCRIBE THE SPOT, GET THE PLANTS · BITS: PUT ON THE SHOW · NOODLES: CAN'T PLAY A WRONG NOTE · COPYCATS: RACE YOUR OWN PAST LIVES · STOOP: FOLD IT, LEAVE IT SOMEWHERE · UNDERSTORY: WHAT A SONG NEVER SAYS · CELEZDIAL SELEKTA: TWELVE SIGNS, TWELVE VOICES · FREESTYLE ENGINE: DRILLS WHATEVER YOU'RE WORST AT · SLOT: 49 CELLS, 9 EXACTLY TRUE · COMMA: TWELVE FIFTHS, ONE LEFTOVER · APAPACHO: THREE CARDS A DAY
      </span>
    </div>
  </div>
</div>
`;

exports[`SelectScreen > matches snapshot with base projects 1`] = `
<div
  style="height: 100%; display: flex; flex-direction: column;"
>
  <div
    style="display: flex; flex-wrap: wrap; justify-content: space-between; align-items: flex-start; gap: 10px 16px; margin-bottom: 12px; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 229, 255, 0.1);"
  >
    <div
      style="flex: 1 1 260px; min-width: 0px;"
    >
      <div
        class="signage"
        style="font-family: "Press Start 2P", monospace; font-size: 16px; line-height: 1.5; color: rgb(0, 229, 255); letter-spacing: var(--track-pixel);"
      >
        SELECT PROGRAM
      </div>
      <h1
        style="font-size: 10px; font-weight: 400; color: var(--cab-text); letter-spacing: var(--track-ui); margin: 6px 0px 0px;"
      >
        MORGAN ESPITIA
         · 
        SOFTWARE ENGINEER
      </h1>
      <div
        class="desk-only"
        style="font-family: var(--font-body); display: flex; flex-wrap: wrap; column-gap: 10px; font-size: 11px; color: var(--cab-muted); letter-spacing: var(--track-ui); margin-top: 2px;"
      >
        <a
          href="mailto:ampactorlabs@gmail.com"
          style="color: inherit; text-decoration: none;"
        >
          ampactorlabs@gmail.com
        </a>
        <a
          href="tel:+14352682446"
          style="color: inherit; text-decoration: none;"
        >
          +1 435-268-2446
        </a>
      </div>
    </div>
    <nav
      aria-label="Operator"
      class="desk-only"
      style="display: flex; flex-wrap: wrap; gap: 6px; align-items: center;"
    >
      <a
        class="pill"
        href="/resume.html"
        style="font-family: "Press Start 2P", monospace; color: rgb(0, 229, 255); text-decoration: none; display: inline-block; font-size: 8px; line-height: 1; border: 1px solid rgba(0, 229, 255, 0.35); border-radius: 3px; background: rgba(0, 229, 255, 0.06); padding: 7px 8px; letter-spacing: var(--track-pixel); white-space: nowrap;"
      >
        RESUME
      </a>
      <a
        class="pill"
        href="https://github.com/ampactor-labs"
        rel="noopener noreferrer"
        style="font-family: "Press Start 2P", monospace; color: rgb(0, 229, 255); text-decoration: none; display: inline-block; font-size: 8px; line-height: 1; border: 1px solid rgba(0, 229, 255, 0.35); border-radius: 3px; background: rgba(0, 229, 255, 0.06); padding: 7px 8px; letter-spacing: var(--track-pixel); white-space: nowrap;"
        target="_blank"
      >
        GITHUB
      </a>
      <a
        class="pill"
        href="https://www.linkedin.com/in/ampactor-labs/"
        rel="noopener noreferrer"
        style="font-family: "Press Start 2P", monospace; color: rgb(0, 229, 255); text-decoration: none; display: inline-block; font-size: 8px; line-height: 1; border: 1px solid rgba(0, 229, 255, 0.35); border-radius: 3px; background: rgba(0, 229, 255, 0.06); padding: 7px 8px; letter-spacing: var(--track-pixel); white-space: nowrap;"
        target="_blank"
      >
        LINKEDIN
      </a>
    </nav>
    <nav
      aria-label="Operator"
      class="phone-rail"
      style="display: none; flex-basis: 100%;"
    >
      <a
        href="/resume.html"
        style="font-family: "Press Start 2P", monospace; font-size: 8px; letter-spacing: var(--track-pixel); color: rgb(0, 229, 255); border: 1px solid rgba(0, 229, 255, 0.35); background: rgba(0, 229, 255, 0.06);"
      >
        RESUME
      </a>
      <a
        href="https://github.com/ampactor-labs"
        rel="noopener noreferrer"
        style="font-family: "Press Start 2P", monospace; font-size: 8px; letter-spacing: var(--track-pixel); color: rgb(0, 229, 255); border: 1px solid rgba(0, 229, 255, 0.35); background: rgba(0, 229, 255, 0.06);"
        target="_blank"
      >
        GITHUB
      </a>
      <a
        href="https://www.linkedin.com/in/ampactor-labs/"
        rel="noopener noreferrer"
        style="font-family: "Press Start 2P", monospace; font-size: 8px; letter-spacing: var(--track-pixel); color: rgb(0, 229, 255); border: 1px solid rgba(0, 229, 255, 0.35); background: rgba(0, 229, 255, 0.06);"
        target="_blank"
      >
        LINKEDIN
      </a>
      <a
        href="mailto:ampactorlabs@gmail.com"
        style="font-family: var(--font-body); font-size: 10px; letter-spacing: var(--track-display); color: var(--cab-muted); border: 1px solid rgba(185, 166, 232, 0.3); background: rgba(185, 166, 232, 0.05); padding: 0px 10px;"
      >
        ampactorlabs@gmail.com
      </a>
      <a
        href="tel:+14352682446"
        style="font-family: var(--font-body); font-size: 10px; letter-spacing: var(--track-display); color: var(--cab-muted); border: 1px solid rgba(185, 166, 232, 0.3); background: rgba(185, 166, 232, 0.05); padding: 0px 10px;"
      >
        +1 435-268-2446
      </a>
    </nav>
  </div>
  <div
    aria-activedescendant="program-mentl"
    aria-label="Project list"
    role="listbox"
    style="flex: 1 1 0%; overflow-y: auto; overflow-x: hidden; display: flex; flex-direction: column; gap: 3px; backdrop-filter: blur(2px); outline: none;"
    tabindex="0"
  >
    <div>
      <div
        class="sign"
        style="padding: 8px 4px 2px; margin-top: 0px;"
      >
        <span
          style="font-family: "Press Start 2P", monospace; font-size: 8px; color: var(--cab-muted); letter-spacing: var(--track-pixel); white-space: nowrap;"
        >
          SYSTEMS
        </span>
        <div
          aria-hidden="true"
          class="sunset"
        />
      </div>
      <div
        aria-label="MENTL — SELF-HOSTING COMPILER"
        aria-selected="true"
        class="project-row"
        id="program-mentl"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: linear-gradient(rgba(0, 229, 255, 0.06), rgba(0, 229, 255, 0.06)), rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(0, 229, 255, 0.15); border-right: 1px solid rgba(0, 229, 255, 0.15); border-bottom: 1px solid rgba(0, 229, 255, 0.15); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: rgb(224, 255, 0); border-radius: 2px; position: absolute; left: 2px; box-shadow: 0 0 6px #E0FF00; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(224, 255, 0); background: rgba(224, 255, 0, 0.067); border-radius: 5px; border: 1px solid rgba(224, 255, 0, 0.133); flex-shrink: 0;"
        >
          ☀
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: rgb(224, 255, 0); transition: color 0.2s ease;"
            >
              MENTL
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              Mentl/WASM
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            SELF-HOSTING COMPILER
          </div>
        </div>
        <div
          style="color: rgb(224, 255, 0); font-size: 14px; flex-shrink: 0; opacity: 0.6;"
        >
          ›
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="SONIDO — CROSS-PLATFORM DSP KERNEL"
        aria-selected="false"
        class="project-row"
        id="program-sonido"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(0, 229, 255); background: rgba(0, 229, 255, 0.067); border-radius: 5px; border: 1px solid rgba(0, 229, 255, 0.133); flex-shrink: 0;"
        >
          ♫
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              SONIDO
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              Rust
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            CROSS-PLATFORM DSP KERNEL
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="TURBOSORT — SIMD-ACCELERATED RADIX SORT"
        aria-selected="false"
        class="project-row"
        id="program-turbosort"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(255, 107, 53); background: rgba(255, 107, 53, 0.067); border-radius: 5px; border: 1px solid rgba(255, 107, 53, 0.133); flex-shrink: 0;"
        >
          ⚡
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              TURBOSORT
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              Rust
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            SIMD-ACCELERATED RADIX SORT
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="2-TOP — ROLLBACK NETCODE BRAWLER"
        aria-selected="false"
        class="project-row"
        id="program-two-top"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(255, 68, 102); background: rgba(255, 68, 102, 0.067); border-radius: 5px; border: 1px solid rgba(255, 68, 102, 0.133); flex-shrink: 0;"
        >
          ⚔
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              2-TOP
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              Rust/Bevy
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            ROLLBACK NETCODE BRAWLER
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="CLOB — TERNARY INTELLIGENCE KERNEL"
        aria-selected="false"
        class="project-row"
        id="program-clob"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(0, 255, 156); background: rgba(0, 255, 156, 0.067); border-radius: 5px; border: 1px solid rgba(0, 255, 156, 0.133); flex-shrink: 0;"
        >
          ∴
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              CLOB
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              Rust
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            TERNARY INTELLIGENCE KERNEL
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="sign"
        style="padding: 8px 4px 2px; margin-top: 6px;"
      >
        <span
          style="font-family: "Press Start 2P", monospace; font-size: 8px; color: var(--cab-muted); letter-spacing: var(--track-pixel); white-space: nowrap;"
        >
          SECURITY
        </span>
        <div
          aria-hidden="true"
          class="sunset"
        />
      </div>
      <div
        aria-label="TOKENSAFE + SCRY — SOLANA SECURITY SCANNER"
        aria-selected="false"
        class="project-row"
        id="program-tokensafe"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(255, 68, 170); background: rgba(255, 68, 170, 0.067); border-radius: 5px; border: 1px solid rgba(255, 68, 170, 0.133); flex-shrink: 0;"
        >
          ◈
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              TOKENSAFE + SCRY
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              TypeScript/Rust
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            SOLANA SECURITY SCANNER
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="sign"
        style="padding: 8px 4px 2px; margin-top: 6px;"
      >
        <span
          style="font-family: "Press Start 2P", monospace; font-size: 8px; color: var(--cab-muted); letter-spacing: var(--track-pixel); white-space: nowrap;"
        >
          WEB3
        </span>
        <div
          aria-hidden="true"
          class="sunset"
        />
      </div>
      <div
        aria-label="LANDED — SOLANA EXECUTION GATEWAY"
        aria-selected="false"
        class="project-row"
        id="program-landed"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(20, 241, 149); background: rgba(20, 241, 149, 0.067); border-radius: 5px; border: 1px solid rgba(20, 241, 149, 0.133); flex-shrink: 0;"
        >
          🛬
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              LANDED
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              Rust
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            SOLANA EXECUTION GATEWAY
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="sign"
        style="padding: 8px 4px 2px; margin-top: 6px;"
      >
        <span
          style="font-family: "Press Start 2P", monospace; font-size: 8px; color: var(--cab-muted); letter-spacing: var(--track-pixel); white-space: nowrap;"
        >
          CREATIVE
        </span>
        <div
          aria-hidden="true"
          class="sunset"
        />
      </div>
      <div
        aria-label="PERENNIALS — CONSTRAINT-SPACE FIELD GUIDE"
        aria-selected="false"
        class="project-row"
        id="program-perennials"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(139, 191, 106); background: rgba(139, 191, 106, 0.067); border-radius: 5px; border: 1px solid rgba(139, 191, 106, 0.133); flex-shrink: 0;"
        >
          ❦
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              PERENNIALS
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              React/TS
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            CONSTRAINT-SPACE FIELD GUIDE
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="BITS — PUPPET-SHOW INSTRUMENT"
        aria-selected="false"
        class="project-row"
        id="program-bits"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(58, 134, 255); background: rgba(58, 134, 255, 0.067); border-radius: 5px; border: 1px solid rgba(58, 134, 255, 0.133); flex-shrink: 0;"
        >
          ✂
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              BITS
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              TS/React
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            PUPPET-SHOW INSTRUMENT
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="NOODLES — MOBILE DAW"
        aria-selected="false"
        class="project-row"
        id="program-noodles"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(232, 184, 75); background: rgba(232, 184, 75, 0.067); border-radius: 5px; border: 1px solid rgba(232, 184, 75, 0.133); flex-shrink: 0;"
        >
          ♬
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              NOODLES
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              JS/Tone.js
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            MOBILE DAW
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="COPYCATS — REPLAY-GHOST PARTY RACER"
        aria-selected="false"
        class="project-row"
        id="program-copycats"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(254, 128, 25); background: rgba(254, 128, 25, 0.067); border-radius: 5px; border: 1px solid rgba(254, 128, 25, 0.133); flex-shrink: 0;"
        >
          🐾
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              COPYCATS
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              Godot 4.7
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            REPLAY-GHOST PARTY RACER
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="STOOP — A PRESS FOR A PERIODICAL"
        aria-selected="false"
        class="project-row"
        id="program-stoop"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(255, 63, 164); background: rgba(255, 63, 164, 0.067); border-radius: 5px; border: 1px solid rgba(255, 63, 164, 0.133); flex-shrink: 0;"
        >
          ¶
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              STOOP
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              JavaScript
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            A PRESS FOR A PERIODICAL
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="UNDERSTORY — LYRIC X-RAY"
        aria-selected="false"
        class="project-row"
        id="program-understory"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(125, 197, 159); background: rgba(125, 197, 159, 0.067); border-radius: 5px; border: 1px solid rgba(125, 197, 159, 0.133); flex-shrink: 0;"
        >
          ⏚
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              UNDERSTORY
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              JavaScript
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            LYRIC X-RAY
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="CELEZDIAL SELEKTA — ZODIAC-MAPPED SYNTHESIZER"
        aria-selected="false"
        class="project-row"
        id="program-celezdial"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(157, 123, 255); background: rgba(157, 123, 255, 0.067); border-radius: 5px; border: 1px solid rgba(157, 123, 255, 0.133); flex-shrink: 0;"
        >
          ☽
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              CELEZDIAL SELEKTA
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              React/Tone.js
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            ZODIAC-MAPPED SYNTHESIZER
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="FREESTYLE ENGINE — FREESTYLE RAP PRACTICE"
        aria-selected="false"
        class="project-row"
        id="program-freestyle-engine"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(233, 231, 220); background: rgba(233, 231, 220, 0.067); border-radius: 5px; border: 1px solid rgba(233, 231, 220, 0.133); flex-shrink: 0;"
        >
          🎤
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              FREESTYLE ENGINE
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              TypeScript
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            FREESTYLE RAP PRACTICE
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="SLOT — B♭ TRUMPET TUNING LATTICE"
        aria-selected="false"
        class="project-row"
        id="program-slot"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(255, 176, 0); background: rgba(255, 176, 0, 0.067); border-radius: 5px; border: 1px solid rgba(255, 176, 0, 0.133); flex-shrink: 0;"
        >
          🎺
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              SLOT
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              JavaScript
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            B♭ TRUMPET TUNING LATTICE
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="COMMA — THE PYTHAGOREAN COMMA, PLAYED"
        aria-selected="false"
        class="project-row"
        id="program-comma"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(99, 196, 224); background: rgba(99, 196, 224, 0.067); border-radius: 5px; border: 1px solid rgba(99, 196, 224, 0.133); flex-shrink: 0;"
        >
          ≋
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              COMMA
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              JavaScript
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            THE PYTHAGOREAN COMMA, PLAYED
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-label="APAPACHO — WORDS · FRASES · SEÑAS"
        aria-selected="false"
        class="project-row"
        id="program-apapacho"
        role="option"
        style="display: flex; align-items: center; gap: 12px; min-height: 56px; padding: 8px 12px; border-radius: 6px; background: rgba(10, 7, 22, 0.55); border-top: 1px solid rgba(185, 166, 232, 0.08); border-right: 1px solid rgba(185, 166, 232, 0.08); border-bottom: 1px solid rgba(185, 166, 232, 0.08); border-image: none; position: relative;"
      >
        <div
          style="width: 3px; top: 0px; bottom: 0px; background: transparent; border-radius: 2px; position: absolute; left: 2px; box-shadow: none; transition: all 0.2s ease;"
        />
        <div
          style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; font-size: 18px; color: rgb(224, 138, 74); background: rgba(224, 138, 74, 0.067); border-radius: 5px; border: 1px solid rgba(224, 138, 74, 0.133); flex-shrink: 0;"
        >
          🫂
        </div>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="font-family: "Share Tech Mono", monospace; font-size: 14px; color: var(--cab-text); transition: color 0.2s ease;"
            >
              APAPACHO
            </span>
            <span
              style="font-family: var(--font-body); font-size: 9px; color: var(--cab-muted); padding: 1px 5px; background: rgba(255, 255, 255, 0.03); border-radius: 3px; border: 1px solid rgba(255, 255, 255, 0.05); flex-shrink: 0;"
            >
              JavaScript
            </span>
          </div>
          <div
            style="font-size: 10px; color: var(--cab-text); margin-top: 1px; letter-spacing: var(--track-ui);"
          >
            WORDS · FRASES · SEÑAS
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="marquee-band"
    style="display: none; height: 3px; margin-top: 10px; border-radius: 2px; background: rgb(224, 255, 0); box-shadow: 0 0 10px rgba(224,255,0,0.6);"
  />
  <div
    class="marquee-wrap"
    style="margin-top: 10px; padding-top: 8px; border-top: 1px solid rgba(0, 229, 255, 0.06); overflow: hidden; height: 24px; position: relative;"
  >
    <div
      class="marquee-track"
      style="font-family: var(--font-body); font-size: 8px; color: var(--cab-faint); letter-spacing: var(--track-ui); animation-duration: 247s;"
    >
      <span
        style="padding-right: 48px;"
      >
        MENTL: THE COMPILER BOOTSTRAPS ITSELF · SONIDO: DESKTOP AND BARE METAL. SAME CODE. · TURBOSORT: FASTER THAN STD · 2-TOP: DETERMINISTIC ACROSS PLATFORMS · CLOB: THREE NUMBERS AND A LAPTOP · TOKENSAFE + SCRY: CHECKS THE CHAIN FOR RUGS · LANDED: WON'T SEND WHAT IT CAN'T CHECK · PERENNIALS: DESCRIBE THE SPOT, GET THE PLANTS · BITS: PUT ON THE SHOW · NOODLES: CAN'T PLAY A WRONG NOTE · COPYCATS: RACE YOUR OWN PAST LIVES · STOOP: FOLD IT, LEAVE IT SOMEWHERE · UNDERSTORY: WHAT A SONG NEVER SAYS · CELEZDIAL SELEKTA: TWELVE SIGNS, TWELVE VOICES · FREESTYLE ENGINE: DRILLS WHATEVER YOU'RE WORST AT · SLOT: 49 CELLS, 9 EXACTLY TRUE · COMMA: TWELVE FIFTHS, ONE LEFTOVER · APAPACHO: THREE CARDS A DAY
      </span>
      <span
        aria-hidden="true"
        style="padding-right: 48px;"
      >
        MENTL: THE COMPILER BOOTSTRAPS ITSELF · SONIDO: DESKTOP AND BARE METAL. SAME CODE. · TURBOSORT: FASTER THAN STD · 2-TOP: DETERMINISTIC ACROSS PLATFORMS · CLOB: THREE NUMBERS AND A LAPTOP · TOKENSAFE + SCRY: CHECKS THE CHAIN FOR RUGS · LANDED: WON'T SEND WHAT IT CAN'T CHECK · PERENNIALS: DESCRIBE THE SPOT, GET THE PLANTS · BITS: PUT ON THE SHOW · NOODLES: CAN'T PLAY A WRONG NOTE · COPYCATS: RACE YOUR OWN PAST LIVES · STOOP: FOLD IT, LEAVE IT SOMEWHERE · UNDERSTORY: WHAT A SONG NEVER SAYS · CELEZDIAL SELEKTA: TWELVE SIGNS, TWELVE VOICES · FREESTYLE ENGINE: DRILLS WHATEVER YOU'RE WORST AT · SLOT: 49 CELLS, 9 EXACTLY TRUE · COMMA: TWELVE FIFTHS, ONE LEFTOVER · APAPACHO: THREE CARDS A DAY
      </span>
    </div>
  </div>
</div>
`;
